Fix a z-index bug

--- a/source/style/element/header.scss
+++ b/source/style/element/header.scss
@@ -1,3 +1,3 @@
 header {
-  z-index: 1000;
+  z-index: 10;
 }
